[package]
name = "handle_integration"
version = "0.0.1"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
distill = { version = "=0.0.3", path = "../..", features = ["serde_importers"] }
futures-executor = { version = "0.3", default-features = false }

image2 = { version = "0.11", features = ["ser"] }
tracing = "0.1"
serde = "1"
uuid = "0.8.2"
bincode = "1.3.1"
